Fixed multiple issues I found on live while testing the site. Also gave it a pass on mobile to see what breaks and what doesn't. Live testing, the best testing.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -247,6 +247,10 @@
 }
 
 /** MISC STYLES */
+#settings_wrapper.container {
+
+}
+
 .view_dungeonroute_details_row {
     height: 40px;
 }
